[tool.poetry]
name = "RCTAB_CLI"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8.0"
msal = "^1.11.0"
typer = "^0.4.1"
aiohttp = "^3.7.4"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
tabulate = "^0.8.9"
python-dateutil = "^2.8.2"
click = "8.0.4"
importlib = "^1.0.4"
sphinxcontrib-napoleon = {version = "^0.7", optional = true}
sphinx-rtd-theme = {version = "^1.3.0", optional = true}
sphinx-subprojecttoctree = {version = "^0.5.4", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
isort = "^5.8.0"
flake8 = "^5.0.4"
pylint = "^2.15.4"
mypy = "^0.931"
black = "^22.10"
pre-commit = "^2.15.0"
safety = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
pylint-absolute-imports = "^1.0.1"

[tool.poetry.extras]
docs = ["sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinx-subprojecttoctree"]

[tool.isort]
profile = "black"

[tool.poetry.scripts]
rctab =  "rctab_cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
