[project]
authors = []
description = "The Command Line Interface for RCTab."
dynamic = [ "dependencies" ]
name = "rctab_cli"
requires-python = ">=3.10"
version = "1.1.0"

[tool.poetry.group.main.dependencies]
msal = "^1.31.0"
typer = "^0.15.1"
aiohttp = "^3.7.4"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
tabulate = "^0.8.9"
python-dateutil = "^2.8.2"
click = "8.0.4"
importlib = "^1.0.4"
sphinxcontrib-napoleon = {version = "^0.7", optional = true}
sphinx-rtd-theme = {version = "^1.3.0", optional = true}
myst-parser = {version = "^2.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^5.0.4"
isort = "^5.8.0"
mypy = "^1.10.0"
pre-commit = "^2.15.0"
pydocstyle = "^6.3.0"
pylint = "^2.15.4"
pylint-absolute-imports = "^1.0.1"
pytest = "^7.1.3"
safety = "^3.1.0"

[project.optional-dependencies]
docs = ["myst-parser", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.isort]
profile = "black"

[project.scripts]
rctab =  "rctab_cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
